--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^3.12.0",
+    "nodemon": "^2.0.22"
   }
 }
